--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "prisma generate && next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+    "prismaDev": "dotenv -e .env.local -- npx prisma migrate dev --skip-seed"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
