--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "prisma generate && next build",
 		"start": "next start",
 		"lint": "next lint",
-    "prismaDev": "dotenv -e .env.local -- npx prisma migrate dev --skip-seed"
+		"prismaDev": "dotenv -e .env.local -- npx prisma migrate dev --skip-seed"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
@@ -16,6 +16,7 @@
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-navigation-menu": "^1.2.1",
+		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-toast": "^1.2.2",
 		"@sendgrid/mail": "^8.1.3",
@@ -27,6 +28,7 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.53.0",
+		"react-icons": "^5.3.0",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8"
