--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react-dom": "^18",
 		"react-hook-form": "^7.53.0",
 		"react-icons": "^5.3.0",
+		"react-timeago": "^7.2.0",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8"
@@ -39,6 +40,7 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/react-timeago": "^4.1.7",
 		"postcss": "^8",
 		"prisma": "^5.20.0",
 		"tailwindcss": "^3.4.1",
