--- a/package.json
+++ b/package.json
@@ -13,21 +13,27 @@
 		"@hookform/resolvers": "^3.9.0",
 		"@prisma/client": "^5.20.0",
 		"@radix-ui/react-avatar": "^1.1.1",
+		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-navigation-menu": "^1.2.1",
+		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-progress": "^1.1.0",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-toast": "^1.2.2",
 		"@sendgrid/mail": "^8.1.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.0.0",
 		"lucide-react": "^0.447.0",
 		"next": "14.2.14",
 		"next-auth": "^4.24.8",
 		"next-themes": "^0.3.0",
+		"prisma-extension-random": "^0.2.2",
 		"react": "^18",
+		"react-countdown-circle-timer": "^3.2.1",
 		"react-dom": "^18",
 		"react-hook-form": "^7.53.0",
 		"react-icons": "^5.3.0",
