--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@radix-ui/react-navigation-menu": "^1.2.1",
 		"@radix-ui/react-popover": "^1.1.2",
 		"@radix-ui/react-progress": "^1.1.0",
+		"@radix-ui/react-radio-group": "^1.2.1",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-toast": "^1.2.2",
@@ -37,6 +38,7 @@
 		"react-dom": "^18",
 		"react-hook-form": "^7.53.0",
 		"react-icons": "^5.3.0",
+		"react-share": "^5.1.0",
 		"react-timeago": "^7.2.0",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
