--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
+		"embla-carousel-autoplay": "^8.3.0",
+		"embla-carousel-react": "^8.3.0",
 		"lucide-react": "^0.447.0",
 		"next": "14.2.14",
 		"next-auth": "^4.24.8",
