--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"prismaDev": "dotenv -e .env.local -- npx prisma migrate dev --skip-seed"
 	},
 	"dependencies": {
+		"lottie-react": "^2.4.0",
 		"@hookform/resolvers": "^3.9.0",
 		"@prisma/client": "^5.20.0",
 		"@radix-ui/react-avatar": "^1.1.1",
