--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
 		"prismaDev": "dotenv -e .env.local -- npx prisma migrate dev --skip-seed"
 	},
 	"dependencies": {
-		"lottie-react": "^2.4.0",
 		"@hookform/resolvers": "^3.9.0",
 		"@prisma/client": "^5.20.0",
+		"@radix-ui/react-accordion": "^1.2.1",
 		"@radix-ui/react-avatar": "^1.1.1",
 		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -31,6 +31,7 @@
 		"cmdk": "^1.0.0",
 		"embla-carousel-autoplay": "^8.3.0",
 		"embla-carousel-react": "^8.3.0",
+		"lottie-react": "^2.4.0",
 		"lucide-react": "^0.447.0",
 		"next": "14.2.14",
 		"next-auth": "^4.24.8",
