--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
+		"@next/third-parties": "^14.0.5-canary.59",
 		"@prisma/client": "^5.21.0",
 		"@radix-ui/react-accordion": "^1.2.1",
 		"@radix-ui/react-avatar": "^1.1.1",
@@ -34,7 +35,7 @@
 		"embla-carousel-react": "^8.3.0",
 		"lottie-react": "^2.4.0",
 		"lucide-react": "^0.447.0",
-		"next": "14.2.14",
+		"next": "^14.2.15",
 		"next-auth": "^4.24.8",
 		"next-themes": "^0.3.0",
 		"prisma-extension-random": "^0.2.2",
