--- a/package.json
+++ b/package.json
@@ -1,63 +1,64 @@
 {
-	"name": "tml_mark4",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "prisma generate && next build",
-		"start": "next start",
-		"lint": "next lint",
-		"prismaDev": "dotenv -e .env.local -- npx prisma migrate dev --skip-seed"
-	},
-	"dependencies": {
-		"@hookform/resolvers": "^3.9.0",
-		"@next/third-parties": "^14.0.5-canary.59",
-		"@prisma/client": "^5.21.0",
-		"@radix-ui/react-accordion": "^1.2.1",
-		"@radix-ui/react-avatar": "^1.1.1",
-		"@radix-ui/react-dialog": "^1.1.2",
-		"@radix-ui/react-dropdown-menu": "^2.1.2",
-		"@radix-ui/react-icons": "^1.3.0",
-		"@radix-ui/react-label": "^2.1.0",
-		"@radix-ui/react-navigation-menu": "^1.2.1",
-		"@radix-ui/react-popover": "^1.1.2",
-		"@radix-ui/react-progress": "^1.1.0",
-		"@radix-ui/react-radio-group": "^1.2.1",
-		"@radix-ui/react-separator": "^1.1.0",
-		"@radix-ui/react-slot": "^1.1.0",
-		"@radix-ui/react-toast": "^1.2.2",
-		"@sendgrid/mail": "^8.1.3",
-		"@vercel/analytics": "^1.3.1",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.1",
-		"cmdk": "^1.0.0",
-		"embla-carousel-autoplay": "^8.3.0",
-		"embla-carousel-react": "^8.3.0",
-		"lottie-react": "^2.4.0",
-		"lucide-react": "^0.447.0",
-		"next": "^14.2.15",
-		"next-auth": "^4.24.8",
-		"next-themes": "^0.3.0",
-		"prisma-extension-random": "^0.2.2",
-		"react": "^18",
-		"react-countdown-circle-timer": "^3.2.1",
-		"react-dom": "^18",
-		"react-hook-form": "^7.53.0",
-		"react-icons": "^5.3.0",
-		"react-share": "^5.1.0",
-		"react-timeago": "^7.2.0",
-		"tailwind-merge": "^2.5.2",
-		"tailwindcss-animate": "^1.0.7",
-		"zod": "^3.23.8"
-	},
-	"devDependencies": {
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"@types/react-timeago": "^4.1.7",
-		"postcss": "^8",
-		"prisma": "^5.21.0",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
-	}
+  "name": "tml_mark4",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "prisma generate && next build",
+    "start": "next start",
+    "lint": "next lint",
+    "prismaDev": "dotenv -e .env.local -- npx prisma migrate dev --skip-seed"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@next/third-parties": "^14.0.5-canary.59",
+    "@prisma/client": "^5.21.0",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@sendgrid/mail": "^8.1.3",
+    "@vercel/analytics": "^1.3.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
+    "lottie-react": "^2.4.0",
+    "lucide-react": "^0.447.0",
+    "next": "^14.2.15",
+    "next-auth": "^4.24.8",
+    "next-themes": "^0.3.0",
+    "prisma-extension-random": "^0.2.2",
+    "react": "^18",
+    "react-countdown-circle-timer": "^3.2.1",
+    "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "react-share": "^5.1.0",
+    "react-timeago": "^7.2.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.48.1",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/react-timeago": "^4.1.7",
+    "postcss": "^8",
+    "prisma": "^5.21.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  }
 }
